# ShengQi

app/: build.gradle
app/src/androidTest/java/com/example/shengqi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  common_platform.cpp  effect_fix.cpp  effects.cpp  native-lib.cpp  org_fmod_example_EffectUtis.h  play_sound.cpp
app/src/main/java/org/fmod/example/: EffectUtis.java  MainActivity.java  QQActivity.java
app/src/main/res/layout/: activity_main.xml  activity_qq.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/shengqi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
